fix style up PlaygroundTile's to match figmas > add close button to tiles and wire up to settings

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,12 +11,14 @@
     --color-fill-primary: #0099cc;
     --color-button-fill: #000000;
     --color-button-accent: #ffffff;
+    --color-button-accent-primary: #a3a0b0;
     --color-button-accent-secondary: #a3a0b0;
     --color-button-primary: #0099cc;
     --color-button-active: #00171f;
     --color-text-primary: #ffffff;
     --color-text-secondary: #a3a0b0;
     --color-text-danger: #e62c13;
+    --color-border-accent: #384250;
   }
   .light {
     --color-fill-base: #f7f8f8;
@@ -25,12 +27,14 @@
     --color-fill-primary: #0099cc;
     --color-button-fill: #ebf7fb;
     --color-button-accent: #0099cc;
+    --color-button-accent-primary: #bcc4c7;
     --color-button-accent-secondary: #0099cc63;
     --color-button-primary: #ebf7fb;
     --color-button-active: #c8e9f4;
     --color-text-primary: #5e6a70;
     --color-text-secondary: #949ba4;
     --color-text-danger: #e62c13;
+    --color-border-accent: #dfe1e2;
   }
 }
 body {
