fix: alternate color for light mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
   .light {
     --color-fill-base: #f7f8f8;
     --color-fill-accent: #fff;
-    --color-fill-alternate: #252a2c;
+    --color-fill-alternate: #eff0f0;
     --color-fill-inverted: #000000;
     --color-fill-primary: #0099cc;
     --color-button-fill: #ebf7fb;
