--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@
     --color-fill-disconnected: #613b36;
     --color-fill-unselected: #f5f8ff1c;
     --color-border-accent: #384250;
+    --color-border-secondary: #6c737f;
   }
   .light {
     --color-fill-base: #f7f8f8;
@@ -47,6 +48,7 @@
     --color-fill-disconnected: #f3d7d3;
     --color-fill-unselected: #5e6a7017;
     --color-border-accent: #dfe1e2;
+    --color-border-secondary: #cccfd1;
   }
 }
 body {
