--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,7 @@
     --color-fill-connected: #2a5644;
     --color-fill-disconnected: #613b36;
     --color-fill-unselected: #f5f8ff1c;
-    --color-border-accent: #384250;
+    --color-chat-accent: #384250;
     --color-border-secondary: #6c737f;
   }
   .light {
@@ -47,7 +47,7 @@
     --color-fill-connected: #c3e4d7;
     --color-fill-disconnected: #f3d7d3;
     --color-fill-unselected: #5e6a7017;
-    --color-border-accent: #dfe1e2;
+    --color-chat-accent: #dfe1e2;
     --color-border-secondary: #cccfd1;
   }
 }
@@ -113,4 +113,17 @@ body {
       fill: var(--color-button-active);
     }
   }
+}
+
+.avatar-me {
+  background: url("../styles/img/avatar_me.png") lightgray 50% / cover no-repeat;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+
+.avatar-agent {
+  background: url("../styles/img/avatar_agent.png") lightgray 50% / cover
+    no-repeat;
+  height: 2.5rem;
+  width: 2.5rem;
 }
